--- a/CPE143L_SA1_David/adminDesign.css
+++ b/CPE143L_SA1_David/adminDesign.css
@@ -26,7 +26,7 @@ header {
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
-  background-color: #333;
+  background-color: #20004f;
   padding: 10px 20px;
 }
 
@@ -63,7 +63,7 @@ header {
 
 .card-container .card {
   flex: 1;
-  background-color: #333;
+  background-color: #20004f;
   color: white;
   margin: 0 10px;
   /* some space between each card */
@@ -78,7 +78,7 @@ header {
 }
 
 div.card {
-  background-color: #333;
+  background-color: #20004f;
   color: white;
 }
 
@@ -106,7 +106,7 @@ div.card {
 .devHead {
   font-size: 28px;
   font-weight: bold;
-  color: #333;
+  color: #20004f;
   width: max-content;
   margin: 0 auto;
   text-align: center;
@@ -170,7 +170,7 @@ div.card {
 }
 
 .tableInfo th {
-  background-color: #333; 
+  background-color: #20004f; 
   color: white; 
   font-weight: bold; 
 }
@@ -180,7 +180,7 @@ div.card {
 }
 
 div.footer {
-  background-color: #333;
+  background-color: #20004f;
   text-align: center;
   color: white;
   padding: 5px;
